controller/test/e2e/features/agentgateway/locality/testdata/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agentgateway-locality
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway
  namespace: agentgateway-locality
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
